tests/conformance/typecheck/invalid/union_not_subtype_of_int_param.ks
// EXPECT: Cannot unify
fun needInt(x: Int): Int = x
fun givesUnion(): Int | Bool = True
val bad = needInt(givesUnion())
